@@ -2,6 +2,7 @@
 =================
 
 - Fix buffer overrun when checking for + and # in topics (bug #799688).
+- Pub client now quits if publish fails.
 
 0.11 - 20110619
 ===============
